# Cpp

./: .gitignore  Bouncing.cpp  CreatingWindow.cpp  Problem18.cpp  Problem27.cpp  Problem35.cpp  Problem37.cpp  Problem49.cpp  README.md  Testing.cpp  anagramSolver.cpp  badAnagramSolver.cpp  bouncing.cpp  problem107.cpp  problem200.cpp  problem33.cpp  problem35.cpp  problem43.cpp  problem45.cpp  problem47.cpp  problem49.cpp  problem50.cpp  problem52.cpp  problem55.cpp  problem62.cpp  problem81.cpp  readSpeed.cpp  sineTest.cpp  test.cpp  unicodeTest.cpp  wordListLower.txt
Basic Functions/Maths Functions/: Square_root.cpp
Basic Functions/_To Reuse/: Optimised_Prime_Finder.cpp  Ordered_Permutations.cpp  Random_Int.cpp  String_Parser.cpp
BasicFunctions/: 2DVector.cpp  3DPolarObj.cpp  colourAndUnicode.cpp  randomTxtColour.cpp  sleepingWithChronoThread.cpp
BasicFunctions/ConsoleFunctions/: randomTxtColourWindows.cpp  sleepingWithChronoThread.cpp
BasicFunctions/Conversion/: castingTypes.cpp  charToInt.cpp  intToString.cpp  stringToInt.cpp
BasicFunctions/MathsFunctions/: digitCheck.cpp  (+2 more)
Basic_Functions/: Random_txt_Colour.cpp
EulerFiles/: Problem107.txt
Euler_Files/: Problem107_test.txt  Problem18_test.txt  Problem18_triangle.txt  Problem19_months.py  Problem67_triangle.txt  Problem81.txt
NowUseless/: Prime_Finder_Slower.cpp
Now_Useless/: Prime_Finder_Slower.cpp
OpenCV/DisplayImage/: CMakeCache.txt  CMakeLists.txt
Programs/: betterPermuter.cpp  matrixFromTxt.cpp  orderedPermutations.cpp  primeFactor.cpp  primeFinder.cpp  timing.cpp  txtSorter.cpp
(+87 files in other folders)
